--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,9 @@
     <meta name="description"content="Web site created using create-react-app" />
     <title>React App</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <style>
       *{
         margin: 0;
