--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <title>MSB Academy</title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
@@ -32,6 +32,23 @@
     </style>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div
+        style="
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          height: 100vh;
+          width: 100vw;
+          overflow: hidden;
+        "
+      >
+        <img
+          src="./pre-loader.gif"
+          alt="Unpacking Resources..."
+          style="height: 200px; width: auto"
+        />
+      </div>
+    </div>
   </body>
 </html>
