--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,6 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Kanit&display=swap"
       rel="stylesheet"
     />
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <style>
       * {
         margin: 0;
